source/styles/styles.css
/* Background and "number of complete pomodoros" colors */
body {
    /* Background color*/
    background-color: #08222e;
    padding-bottom: 100%;
    margin: 0;
    /* Text color */
    color: #B7DAEB;
}

/* "SOURCE" text */
a {
    color: #B7DAEB;
    height: 1.5rem;
    width: 5rem;
    text-align: center;
    padding: 5px 0;
    margin: 0 auto;
    margin-top: 15px;
}

/* Main page layout and colors */
#all{
    background-color: #1B3642;
    width: 20rem;
    margin: 0 auto;
    margin-top: 1em;
    padding: 4rem;
    border-radius: 25px;
}

/* Creates flexbox for most of layout */
#main {
    display: flex;
    flex-direction: column;
    justify-content: center;
}

/* Main timer */
#timer {
    display: flex;
    justify-content: center;
    font-size: 4em;
    color: #b7daeb;
}

/* Not used */
/* #StartReset {
    display: flex;
    justify-content: center;
    flex-direction: row;
    font-size: 2em;
    padding: 1%;
    padding-top: 1em;
    align-items: center;
}

ul {
    text-align: left;
} */

/* start/stop btn */
#mixBut {
    /* color is changed in the html file */
    margin: 0 auto;
    float: left;
    padding: .25rem;  
    border-radius: 25px;
    font-weight: bold;
    font-size: 1.5rem;
}

/* reset btn */
#reset-btn {
    /* color is changed in the html file */
    margin: 0 auto;
    float: right;
    padding: .25rem;  
    border-radius: 25px;
    font-weight: bold;
    font-size: 1.5rem;
}

/* #task-container {
    background-color: #b8daeb;
    border-radius: 15px;
    align-items: center;
    color: #07232e;
    text-align: center;
    padding-bottom: 3px;
    margin-bottom: 0.5rem;
}

#tasks {
    background-color: #fbfbfb;
    color: #2b2b2b;
    padding: 1rem;
    margin: 0.5em;
    /* border-radius: 25px;
} */

/* Aligns text "num of complete pomos */
#completePomos {
    text-align: center;
}

/* Old task list css */
/* 
h2 {
    margin-bottom: 0;
    text-align: center;
}

p {
    margin-top: 0.5em;
    margin-left: 1rem;
    margin-right: 1rem;
}

#newitempomo {
    width: 5em;
}

#add-btn {
    background-color: #fbfbfb;
    color: #2b2b2b;
    margin: 0 auto;
    padding: .25rem;  
    border-radius: 25px;
}

#clear-btn, #clearList {
    background-color: #fbfbfb;
    color: #2b2b2b;
    margin: 0 auto;
    padding: .25rem;  
    border-radius: 25px;
} */

/* Settings css format */
.modal {
    display: none; /* Hidden by default */
    position: fixed; /* Stay in place */
    z-index: 1; /* Sit on top */
    left: 0;
    top: 0;
    width: 100%; /* Full width */
    height: 100%; /* Full height */
    overflow: auto; /* Enable scroll if needed */
    background-color: rgb(0,0,0); /* Fallback color */
    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
}

/* settings popup */
.modal-settings-content {
    /* background of settings */
    background-color: #b7daeb;
    /* Color of text */
    color: #08222e;
    margin: 4em auto; /* 15% from the top and centered */
    padding: 25px;

    text-align: center;
    border-radius: 15px;

    border: 1px solid #888;
    max-width: 20vw;
    display: flex;
    flex-direction: column;
}

/* Lines up the "x" in the settings to the left */
.close {
    text-align: left;
}

/* Font of the settings */
.settingText {
    font-size: 23px;
    font-family: 'Nunito', sans-serif;
}

/* Style for user input */
input[type=number] {
    border: 0;
    padding: 5px;
    border-radius: 20px;
}

/* Gets rid of box around volume control */
fieldset {
    border: 0;
    height: 100px;
    width: 300px;
}

/* Changes size of the audio selection */
select {
    width: 100%;
    padding: 10px;
    border-radius:10px;
}

/* Changes size of "Settings" at top of settings */
#modal-title {
    font-size: 3vw;
    font-weight: bold;
    text-align: center;
    vertical-align: top;
}

/* Slightly alters spacing in settings */
.modal-settings-customization {
    font-size: 1.5vw;
    width:100%;
}

/* Puts input minutes to the left in settings*/
.minutes {
    width: 45%;
    float: left;
 }

 /* Puts input seconds to the right in settings*/
.seconds{
    width: 45%;
    float: right;
}

/* Changes "x" sign in settings */
.close {
    color: #aaa;
    float: right;
    font-size: 28px;
    font-weight: bold;
}

/* Changes "x" to bold when mouse hovers over */
.close:hover,
.close:focus {
  color: #2b2b2b;
  text-decoration: none;
  cursor: pointer;
}

